# SCUTStudentLife

./: .gitignore  CMakeLists.txt  README.md
include/: Point2.h  Point3.h  Tuple2.h  Tuple3.h  Vector2.h  Vector3.h  VmUtil.h  agent.h  config.h  loader.h  mainwindow.h  map.h  reader.h  schedule.h  social-force.h  vecmath.h  vm_conf.h  wall.h
map/: real_roads.txt  real_walls.txt
schedule/json/: 19信息安全课表.json  19网络工程课表.json  19计科全英创新班课表.json  19计算机科学与技术1班课表.json  19计算机科学与技术2班课表.json  19软件工程2班课表.json  19软件工程3班课表.json  19软件工程4班课表.json  19软件工程中澳班课表.json  19软件工程卓越班课表.json  20信息安全课表.json  20网络工程课表.json  20计科全英联合班课表.json  20计算机科学与技术1班课表.json  20计算机科学与技术2班课表.json  20软件工程1班课表.json  20软件工程2班课表.json  20软件工程3班课表.json  20软件工程4班课表.json  20软件工程中澳班课表.json  20软件工程卓越班课表.json  21计科全英创新班课表.json  21计算机类1班课表.json  21计算机类2班课表.json  21计算机类3班课表.json  21计算机类4班课表.json  21软件工程2班课表.json  21软件工程3班课表.json  21软件工程4班课表.json  21软件工程中澳班课表.json  21软件工程卓越班课表.json
src/: agent.cpp  loader.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  map.cpp  reader.cpp  schedule.cpp  social-force.cpp  wall.cpp
